@@ -25,8 +25,8 @@ import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.Lexer;
 import org.antlr.v4.runtime.Parser;
-import org.antlr.v4.runtime.UnicodeCharStream;
-import org.apache.commons.io.IOUtils;
+import org.antlr.v4.runtime.ParserRuleContext;
+import org.antlr.v4.runtime.Tokenizer;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Measurement;
@@ -67,7 +67,7 @@ public class JMXBSLLexerTest {
     final ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
     try (InputStream inputStream = classLoader.getResourceAsStream("Module.bsl")) {
       assert inputStream != null;
-      content = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+      content = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
     } catch (IOException e) {
       e.printStackTrace();
     }
@@ -87,9 +87,9 @@ public class JMXBSLLexerTest {
     var tokenizer = new Tokenizer<>(content, lexer, parserClass) {
 
       @Override
-      protected BSLParserRuleContext rootAST() {
+      protected ParserRuleContext rootAST() {
         try {
-          return (BSLParserRuleContext) parserRootASTMethod.invoke(parser);
+          return (ParserRuleContext) parserRootASTMethod.invoke(parser);
         } catch (IllegalAccessException | InvocationTargetException e) {
           throw new RuntimeException("Error: ", e);
         }
